avances 10 de junio

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
     integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
   <title>Portal EST 19</title>
-  <!-- TODO: COLOCAR FAVICON -->
- <!--  <link rel="shortcut icon" href="./tractionsof.ico" type="image/x-icon"> -->
+  <link rel="shortcut icon" href="./logo-est-19.ico" type="image/x-icon">
 
 </head>
 
